# coderisk-ai

./: CRYPTO_DETECTOR_IMPLEMENTATION.md  README.md  SSRF_IMPLEMENTATION.md  pyproject.toml  test_fixes.py  validate_crypto_detector.py  verify_ssrf.py
docs/: A07_A01_IMPROVEMENTS.md  A07_IMPLEMENTATION.md  OUTPUT_SCHEMA.md  SCORING_MODEL.md
examples/: a02_safe_crypto_test.py  a03_sql_injection_test.py  a03_sql_safe_evidence_test.py  a04_insecure_design_test.py  a06_requirements_pinned_test.txt  a07_identification_authentication_failures_test.py  a07_password_policy_split_test.py  a09_fallback_telemetry_test.py  a09_security_logging_monitoring_failures_test.py  ai_generated_auth_failures.py  broken_access_control.py  comprehensive_crypto_test.py  cryptographic_failures.py  pyproject_unpinned.toml  requirements_deprecated.txt  requirements_unpinned.txt  security_misconfiguration.py  ssrf_requests.py  ssrf_urllib.py  unsafe_deserialization.py
examples_safe/: README.md  a01_broken_access_control_safe_test.py  a02_cryptographic_failures_safe_test.py  a03_sql_injection_safe_test.py  a04_insecure_design_safe_test.py  a05_security_misconfiguration_safe_test.py  a06_pyproject_pinned_safe_test.toml  a07_identification_authentication_failures_safe_test.py  a08_unsafe_deserialization_safe_test.py  a10_ssrf_safe_test.py  identification_authentication_failures_safe.py  requirements_pinned_safe.txt  security_logging_monitoring_failures_safe.py  security_misconfiguration_safe.py  sql_injection_safe.py  ssrf_safe.py
tests/: test_a06_detector.py  test_a07_a01_improvements.py  (+6 more)
(+21 files in other folders)
