[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coderisk-ai"
version = "0.0.1"
description = "Probabilistic security scoring for AI-generated code"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Craig Stueber" }]
dependencies = []

[project.scripts]
coderisk = "coderisk_ai.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
